apigee/apigee-docs-microgateway-as-a-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: my-deployment
spec:
  selector:
    matchLabels:
      purpose: cdn
  replicas: 2
  template:
    metadata:
      labels:
        purpose: cdn
    spec:
      containers:
      - name: echo-amd64
        image: gcr.io/google-samples/hello-app-cdn:1.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: my-deployment2
spec:
  selector:
    matchLabels:
      purpose: cdn2
  replicas: 2
  template:
    metadata:
      labels:
        purpose: cdn2
    spec:
      containers:
      - name: echo-amd64
        image: gcr.io/google-samples/hello-app-cdn:1.0
