apigee/apigee-docs-microgateway-as-a-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: my-service
  labels:
    purpose: cdn
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"backend-config2"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    purpose: cdn
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: my-service2
  labels:
    purpose: cdn2
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"backend-config"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    purpose: cdn2
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
